# play-with-gcp-pubsub

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
app/: create_task.py  tasks.py  websocket.py
app/handlers/: base_handler.py
app/utils/: config.py
config/: dev.env.template
